# sqlite-tolerant-parser-prototype

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  build.rs  build_log.txt  dump_tree.txt  memo.md  parse2_log.txt  parse_log.txt  scan_log.txt
crates/generate/: Cargo.toml
crates/generate/src/: config.rs  convert.rs  export_scan_rule.rs  export_state_transition.rs  export_syntax_kind.rs  lib.rs
crates/generate/src/assets/: scan_rule.json
crates/parser/: Cargo.toml
crates/parser-wasi/: Cargo.toml
crates/parser-wasi/src/: bindings.rs
crates/parser-wasi/src/bindings/: parser_world.rs  resources.rs
crates/parser-wasi/wit/: deps.toml  world.wit
crates/parser/src/: lib.rs  parser.rs
crates/scanner/: Cargo.toml
crates/scanner-wasi/: Cargo.toml
crates/scanner-wasi/src/: bindings.rs  lib.rs
crates/scanner-wasi/src/bindings/: resources.rs  scanner_world.rs
crates/scanner-wasi/wit/: world.wit
crates/scanner/src/: lib.rs  scanner.rs
examples/parser-wasi-web/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/parser-wasi-web/src/: counter.ts
examples/scanner-wasi-web/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
examples/scanner-wasi-web/src/: counter.ts
src/: engine.rs  lib.rs  main.rs
src/assets/sqlite/: lemon.h  sqlite3_shim.h
src/binding/: keyword_check.rs  lemon.rs
tools/: Cargo.toml  build.rs
tools/src/: binding.rs  lib.rs
tools/src/binding/: lemon.rs
