[package]
name = "sqlite-parser-proto"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "tools",
    "crates/generate", 
    "crates/parser", "crates/scanner", "crates/scanner-wasi",
]

[[bin]]
name = "parsing_state"
path = "src/bin/parsing_state/main.rs"

[[bin]]
name = "parsing_tree"
path = "src/bin/parsing_tree/main.rs"

[[bin]]
name = "parser_engine"
path = "src/bin/parser_engine/main.rs"

[[bin]]
name = "parser_engine2"
path = "src/bin/parser_engine2/main.rs"

[[bin]]
name = "scanner"
path = "src/bin/scanner/main.rs"

[workspace.dependencies]
anyhow = "1.0.97"
lalry = "0.1.0"
phf = { version = "0.11.3", features = ["macros"] }
serde_json = "1.0.140"
quote = "1.0.40"
proc-macro2 = "1.0.94"
cstree = "0.12.2"
serde = { version = "1.0.219", features = ["derive"] }

[dependencies]
anyhow = { workspace = true }
cc = "1.2.17"
cstree = { workspace = true }
lalry = { workspace = true }
maplit = "1.0.2"
phf = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = "1.11.1"
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
anyhow = "1.0"
bindgen = "0.71.1"
cc = "1.0"

[features]
keyword_matcher = []
grammar_converter = []
parser_generated = []
