[package]
name = "tools"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "grammar_converter"
path = "src/bin/grammar_converter/main.rs"

[[bin]]
name = "keyword_matcher"
path = "src/bin/keyword_matcher/main.rs"

[dependencies]
sqlite-parser-proto = { path = "../" }
anyhow = { workspace = true }
cc = "1.2.17"
cstree = { workspace = true }
lalry = { workspace = true }
maplit = "1.0.2"
phf = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
regex = "1.11.1"
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
anyhow = "1.0"
bindgen = "0.71.1"
cc = "1.0"

[features]
keyword_matcher = []
grammar_converter = []
