[package]
name = "generate"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cmd"

[dependencies]
sqlite-parser-proto = { path = "../.." }
anyhow = { workspace = true }
lalry = { workspace = true }
serde_json = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
syn = { version = "2.0.100", features = ["full"] }
prettyplease = "0.2.32"
